# asr-w2l-demo

./: .gitignore  AudioToWords.cpp  CMakeLists.txt  Util.cpp  Util.h  commands.sh  lib.cpp  main.cpp  run.sh  setup_cmake.sh  w2l.cpp  w2l.h
.devcontainer/: Dockerfile  Dockerfile_backup  devcontainer.json
cmake/: FindGFlags.cmake  FindWav2Letter.cmake
includes/: api.h
modules/: bundle_static_library.cmake
old/: AudioToWords.cpp  AudioToWords.h  CMakeLists.txt
src/: AudioToWords.cpp  AudioToWords.h  Util.cpp  W2lComponent.hpp  api.cpp  api.h  main.cpp  w2l.cpp  w2l.h  w2l.hpp
src/controller/: Controller.hpp
src/dto/: DTOs.hpp
src/http/: W2lComponent.hpp  http.cpp
src/http/controller/: Controller.hpp
src/service/: W2lService.cpp  W2lService.hpp
